--- a/application/Testrigg/app/src/main/res/values/strings.xml
+++ b/application/Testrigg/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Testrigg</string>
+    <string name="bt_not_enabled_leaving">Bluetooth inte aktiverat, stänger ner</string>
 </resources>
