--- a/application/Testrigg/app/src/main/res/values/strings.xml
+++ b/application/Testrigg/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Testrigg</string>
     <string name="bt_not_enabled_leaving">Bluetooth inte aktiverat, stänger ner</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="google_maps_key"></string>
 </resources>
